--- a/AboutPage/index.html
+++ b/AboutPage/index.html
@@ -33,6 +33,7 @@
         <div class="website-list">
             <div>Day 1 <span><a href="../Day01/index.html">Homepage</a></span></div>
             <div>Day 2 <span><a href="../Day02/index.html">Make a deal!</a></span></div>
+            <div>Day 3 <span><a href="../Day03/index.html">Get a Random Color Background</a></span></div>
         </div>
     </section>
 </body>
